--- a/tp/datastructures.adoc
+++ b/tp/datastructures.adoc
@@ -21,9 +21,10 @@ toc::[]
 
 En anglais : ::
 
-* https://docs.oracle.com/javase/8/docs/api/index.html?java/util/List.html[API^]
-* http://docs.oracle.com/javase/7/docs/technotes/guides/collections/overview.html[Collections Framework Overview^]
+* https://docs.oracle.com/javase/8/docs/api/index.html?java/util/package-summary.html[API^]
+* http://docs.oracle.com/javase/8/docs/technotes/guides/collections/overview.html[Collections Framework Overview^]
 * http://docs.oracle.com/javase/tutorial/collections/index.html[The Java™ Tutorials: Trail: Collections^]
+* http://files.zeroturnaround.com/pdf/zt_java_collections_cheat_sheet.pdf[Java Collections Cheat Sheet]
 * http://bigocheatsheet.com/[Know Thy Complexities!^]
 
 En français : ::
@@ -58,9 +59,7 @@ List list = Arrays.asList(2, 1, "banana", null, "apple", "orange",
                           3, new Object(), new java.util.Date());
 ----
 
-=== Tri
-
-==== Comparateurs
+=== Tri avec un comparateur
 
 Trier la liste ci-dessus avec un comparateur explicite en utilisant l'ordre suivant :
 
@@ -74,15 +73,43 @@ Le résultat doit être le suivant :
 
 `[1, 2, 3, "apple", "banana", "orange", Tue Aug 22 15:18:21 CEST 2017, java.lang.Object@cafebabe, null]`.
 
-==== Ordre naturel
+=== Chaînage de comparateurs
+
+Soit le code suivant :
+
+[source,java]
+----
+public class Person {
+    private final String firstName;
+    private final String lastName;
+    public Person(String firstName, String lastName) {
+        this.firstName = firstName;
+        this.lastName = lastName;
+    }
+    // Getters and setters
+}
+
+public class ByFirstNameComparator implements Comparator { ... }
+
+public class ByLastNameComparator implements Comparator { ... }
+----
+
+En réutilisant les classes existantes, créer une implémentation de comparateur `ByLastNameThenFirstNameComparator` qui compare deux instances de `Person` :
+
+1. Par leur attribut `lastName`,
+2. Puis en cas d'égalité par leur attribut `firstName`.
+
+=== Tri par ordre naturel
 
 Exercice 1:: Trier la liste ci-dessus dans l'ordre naturel des éléments.
 +
 Expliquer la raison de l'exception.
 +
-Exercice 2:: Implémenter une méthode qui accepte en répertoire en paramètre et retourne la liste triée des enfants de ce répertoire.
+Exercice 2:: Implémenter une méthode qui accepte en paramètre le chemin vers un répertoire et retourne la liste triée des enfants de ce répertoire.
 +
-Appeler la méthode en passant un répertoire avec un nombre conséquent d'enfants. A l'aide la JavaDoc, expliquer l'ordre utilisé.
+Appeler la méthode en passant un répertoire avec un nombre conséquent d'enfants.
+Constater l'orde utilisé.
+Chercher la confirmation à l'aide de la JavaDoc.
 
 === Itération
 
@@ -98,4 +125,76 @@ Le résultat doit être le suivant :
 
 `[["banana", "apple", "orange"], [2, 1, 3], [null, java.lang.Object@cafebabe, Tue Aug 22 15:18:21 CEST 2017]]`
 
+== Manipulation de sets
 
+Soit la classe `Person` suivante :
+
+[source,java]
+.Person.java
+----
+public class Person {
+    private final String name;
+    private final String avs;
+    public Person(String name, String avs) {
+        this.name = name;
+        this.avs = avs;
+    }
+    
+    public static void main(String... args) {
+        Person p1 = new Person("John Doe", "756-1234-5678-97");
+        Person p2 = new Person("John Doe", "756-1234-5678-97");
+        Person p3 = new Person("John Amden", "111-11-111-113");
+        Set persons = new HashSet();
+        persons.add(p1);
+        persons.add(p2);
+        persons.add(p3);
+        System.out.println(persons.size());           <1>
+        Object o = persons.iterator().next();
+        System.out.println(p1 == o);                  <2>
+    }
+}
+----
+
+En surchargeant uniquement les méthodes adéquates dans la classe `Person`, faire en sorte que le résultat de l'exécution du code précédent soit :
+
+[source]
+----
+1    <1>
+true <2>
+----
+
+== Manipulation de dictionnaires
+
+Soit le code suivant :
+
+[source, java]
+----
+public class Wrapper {
+    private final int id;
+    public Wrapper(int id) {
+        this.id = id;
+    }
+    
+    @Override
+    public boolean equals(Object o) {
+        return o instanceof Wrapper && this.id == ((Wrapper) o).id;
+    }
+
+    @Override
+    public int hashCode() {
+        return 1;                              <1>
+    }
+
+    public static void main(String... args) {
+        Map map = new HashMap();               <2>
+        int limit = 10_000_000;                <3>
+        for (int i = 0; i < limit; i++) {
+        Wrapper w = new Wrapper(i);
+        map.put(w, w);
+    }
+}
+----
+
+<1> Expliquer le problème posé par le code. Le corriger.
+<2> Quels sont le(s) paramètre(s) à passer dans le constructeur de la `HashMap` pour optimiser le temps d'exécution du code ? Justifier.
+<3> En quoi la réponse à la question précédent diffère si la valeur de la variable `limit` n'est pas connue ?
