--- a/tp/datastructures.adoc
+++ b/tp/datastructures.adoc
@@ -13,7 +13,7 @@ Nicolas Frankel
 :imagesdir: ./images/datastructures
 :toc:
 
-include::../license.adoc[]
+include::../common/license.adoc[]
 
 toc::[]
 
