Add course section on generics

--- a/README.adoc
+++ b/README.adoc
@@ -12,4 +12,5 @@ include::license.adoc[]
 * <<cours/datastructures.adoc#,Cours>>
 * <<tp/datastructures.adoc#,Travaux Pratiques>>
 . Génériques
+* <<cours/generics.adoc#,Cours>>
 . Streams
