--- a/README.adoc
+++ b/README.adoc
@@ -15,3 +15,4 @@ include::license.adoc[]
 * <<cours/generics.adoc#,Cours>>
 * <<tp/generics.adoc#,Travaux Pratiques>>
 . Streams
+* <<cours/streams.adoc#,Cours>>
