--- a/tp/streams.adoc
+++ b/tp/streams.adoc
@@ -308,3 +308,8 @@ A l'aide de _streams_ :
 * Fib~1~ = 1
 * Fib~2~ = 1, 
 ====
+
+== Exercices supplémentaires
+
+https://github.com/xebia/java8-hands-on-jfall-2014[Lab Xebia à JFall 2014^]::
+Les instructions sont données sur Github.
