--- a/tp/streams.adoc
+++ b/tp/streams.adoc
@@ -302,4 +302,4 @@ A l'aide de _streams_ :
 == Exercices supplémentaires
 
 https://github.com/sodant/java8workshop/tree/master/JFall%20Hands-On/java8-hands-on-jfall-2014[Lab Xebia à JFall 2014^]::
-Les instructions sont données sur Github.
+Réaliser les exercices du dossier JFall Hands-On en suivant les instructions données sur Github.
